All done, starting first bonus

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 </head>
 <body>
     <div id="container">
+        <div id="thumbHolder">ciao</div>
         <div id="slider">
-            <button class="buttonPositionNext" id="buttoback">precedente</button>
-            <button class="buttonPositionBack" id="buttonext">Prossima Slide</button>
+            <button class="buttonPositionNext" id="buttonext">Prossima Slide</button>
+            <button class="buttonPositionBack" id="buttoback">Precedente</button>
         </div>
+    </div>
         <script src="./js/main.js"></script>
 </body>
 </html>
