Fisrt Bonus Done

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="container">
-        <div id="thumbHolder">ciao</div>
+        <div id="thumbHolder"></div>
         <div id="slider">
             <button class="buttonPositionNext" id="buttonext">Prossima Slide</button>
             <button class="buttonPositionBack" id="buttoback">Precedente</button>
